demo1
Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\missu3l\Desktop\React Prac\refractor\crsp-webui-router\node_modules\node-fetch\src\index.js:9
    import http from 'node:http';
    ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      1 | import { renderHook } from "@testing-library/react"
      2 | import { QueryClient, QueryClientProvider } from "@tanstack/react-query"
    > 3 | import fetchMock from "fetch-mock-jest"
        | ^
      4 | import { useLoginMetadata } from "./hooks"
      5 | import { LOGIN_META_DATA_URL } from "../../data/endpoints";
      6 |

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (node_modules/fetch-mock/cjs/server.js:9:10)
      at Object.<anonymous> (node_modules/fetch-mock-jest/server.js:1:101)
      at Object.<anonymous> (src/features/auth/hooks_auth.test.tsx:3:1)
